<resources>
    <string name="app_name">Medenjaci</string>
    <string name="all_products">Svi proizvodi</string>
    <string name="about_us">O nama</string>
    <string name="product_details">Detalji proizvoda</string>
    <string name="price_short">%1$d RSD</string>
    <string name="price_long">Cena: %1$d RSD</string>
    <string name="price_discount_long">Cena: %1$d %2$d RSD</string>
    <string name="product_name_placeholder">Proizvod</string>
    <string name="add_to_cart">Dodaj u korpu</string>
    <string name="added_to_cart">Dodato u korpu: %1$d x %2$s</string>
    <string name="amount">Količina: </string>
    <string name="amount_number">%1$d x </string>
    <string name="must_login_before_action">Morate se ulogovati da biste to učinili</string>
    <string name="user">Korisnik</string>
    <string name="username">Korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="current_password">Trenutna lozinka: </string>
    <string name="new_password">Nova lozinka: </string>
    <string name="new_password_repeat">Ponovljena lozinka: </string>
    <string name="change_password">Promeni lozinku</string>
    <string name="change_password_successful">Lozinka uspešno promenjena</string>
    <string name="change_password_unsuccessful">Greška pri promeni lozinke!</string>
    <string name="first_name">Ime: </string>
    <string name="last_name">Prezime: </string>
    <string name="phone">Telefon: </string>
    <string name="address">Adresa: </string>
    <string name="save_data">Sačuvaj podatke</string>
    <string name="account_settings">Podešavanja naloga</string>
    <string name="data_change_successful">Podaci uspešno promenjeni</string>
    <string name="login">Uloguj se</string>
    <string name="logout">Izloguj se</string>
    <string name="login_successful">Uspešno ste ulogovani</string>
    <string name="login_unsuccessful_wrong_credentials">Neispravni kredencijali!</string>
    <string name="cart">Korpa</string>
    <string name="total_price">Ukupno: %1$d RSD</string>
    <string name="order">Naruči</string>
    <string name="order_successful">Narudžbina uspešno izvršena!</string>
    <string name="about_us_text">
        Pčelarska kuća „Medenjaci“ se snabdeva najfinijim pčelinjim proizvodima direktno iz sela za koje sigurno nikad niste čuli.
        Opšte je poznato koliko su pčelinji proizvodi zdravi (i pritom ukusni), te vam toplo preporučujemo da iz udobnosti svog doma i po najpovoljnijim cenama naručite neke od njih i uverite se u kvalitet koji nudimo.
    </string>
    <string name="an_error_occurred">Došlo je do greške</string>
</resources>