<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSettingsActivity">

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/logout"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vi_user_settings_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/text_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_logout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_user_settings_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vi_user_settings_line">

        <TextView
            android:id="@+id/lbl_user_settings_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@id/lbl_user_settings_last_name"
            app:layout_constraintEnd_toStartOf="@id/et_user_settings_first_name"
            app:layout_constraintStart_toStartOf="@id/cl_user_settings_data"
            app:layout_constraintTop_toTopOf="@id/cl_user_settings_data" />

        <EditText
            android:id="@+id/et_user_settings_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/cl_user_settings_data"
            app:layout_constraintStart_toEndOf="@id/lbl_user_settings_first_name"
            app:layout_constraintTop_toTopOf="@id/cl_user_settings_data"
            tools:text="@string/first_name" />

        <TextView
            android:id="@+id/lbl_user_settings_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@id/lbl_user_settings_phone"
            app:layout_constraintEnd_toStartOf="@id/et_user_settings_last_name"
            app:layout_constraintStart_toStartOf="@id/cl_user_settings_data"
            app:layout_constraintTop_toBottomOf="@id/lbl_user_settings_first_name" />

        <EditText
            android:id="@+id/et_user_settings_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/cl_user_settings_data"
            app:layout_constraintStart_toEndOf="@id/lbl_user_settings_last_name"
            app:layout_constraintTop_toBottomOf="@id/et_user_settings_first_name"
            tools:text="@string/last_name" />

        <TextView
            android:id="@+id/lbl_user_settings_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/phone"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@id/lbl_user_settings_address"
            app:layout_constraintEnd_toStartOf="@id/et_user_settings_phone"
            app:layout_constraintStart_toStartOf="@id/cl_user_settings_data"
            app:layout_constraintTop_toBottomOf="@id/lbl_user_settings_last_name" />

        <EditText
            android:id="@+id/et_user_settings_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/cl_user_settings_data"
            app:layout_constraintStart_toEndOf="@id/lbl_user_settings_phone"
            app:layout_constraintTop_toBottomOf="@id/et_user_settings_last_name"
            tools:text="@string/phone" />

        <TextView
            android:id="@+id/lbl_user_settings_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@id/cl_user_settings_data"
            app:layout_constraintEnd_toStartOf="@id/et_user_settings_address"
            app:layout_constraintStart_toStartOf="@id/cl_user_settings_data"
            app:layout_constraintTop_toBottomOf="@id/lbl_user_settings_phone" />

        <EditText
            android:id="@+id/et_user_settings_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/cl_user_settings_data"
            app:layout_constraintEnd_toEndOf="@id/cl_user_settings_data"
            app:layout_constraintStart_toEndOf="@id/lbl_user_settings_address"
            app:layout_constraintTop_toBottomOf="@id/et_user_settings_phone"
            tools:text="@string/address" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_user_settings_save_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save_data"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_user_settings_data" />


</androidx.constraintlayout.widget.ConstraintLayout>