<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_productdetails_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/product_name_placeholder"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_productdetails_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:justificationMode="inter_word"
        android:text="@string/product_name_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_productdetails_title" />

    <ImageView
        android:id="@+id/img_productdetails"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_productdetails_description" />

    <TextView
        android:id="@+id/lbl_productdetails_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/product_name_placeholder"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_productdetails" />

    <TextView
        android:id="@+id/lbl_productdetails_amount"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/amount"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@id/btn_productdetails_addtocart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/spn_productdetails_amount" />

    <Spinner
        android:id="@+id/spn_productdetails_amount"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/background_color"
        android:gravity="center_vertical"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@id/btn_productdetails_addtocart"
        app:layout_constraintLeft_toRightOf="@id/lbl_productdetails_amount" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/spn_productdetails_amount"
        app:layout_constraintEnd_toEndOf="@+id/spn_productdetails_amount"
        app:layout_constraintTop_toTopOf="@+id/spn_productdetails_amount"
        app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24" />

    <Button
        android:id="@+id/btn_productdetails_addtocart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_to_cart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>